@@ -4,9 +4,11 @@
  */
 package blue.application;
 
+import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.openide.awt.HtmlBrowser.URLDisplayer;
 import org.openide.util.Exceptions;
@@ -18,8 +20,12 @@ public final class MakeDonationAction implements ActionListener {
     @Override
     public void actionPerformed(ActionEvent e) {
         try {
-            URLDisplayer.getDefault().showURL(new URL(URL_DONATIONS));
-        } catch (MalformedURLException ex) {
+            if (Desktop.isDesktopSupported()) {
+                Desktop.getDesktop().browse(new URI(URL_DONATIONS));
+            } else {
+                URLDisplayer.getDefault().showURL(new URL(URL_DONATIONS));
+            }
+        } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
     }
